---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 19. 01. 2018
  Bugfixes:
    - Fixed poles not being placed correctly when driving diagonally
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 13. 01. 2018
  Bugfixes:
    - Fixed errors with autopilot
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 13. 12. 2017
  Changes:
    - Updated for Factorio 0.16