@@ -49,6 +49,7 @@ msg-cant-remove=Kann Gleis nicht entfernen
 msg-maintenance-end=Wartung beendet
 msg-changing-modes=Wechsle Modus
 msg-out-of-item=Out of __1__
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Seite der Strommasten:
 stg-flipPoles=tausche links rechts
@@ -96,3 +97,8 @@ farl-roboport=F.A.R.L. Modul
 
 [controls]
 toggle-train-control=Toggle manual train control
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode. 
+
