@@ -49,6 +49,7 @@ msg-cant-remove=Can't remove rail
 msg-maintenance-end=Maintenance end
 msg-changing-modes=Changing modes
 msg-out-of-item=Out of __1__
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Side of pole:
 stg-flipPoles=flip left/right
@@ -96,3 +97,8 @@ farl-roboport=F.A.R.L. Module
 
 [controls]
 toggle-train-control=Toggle manual train control
+
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode. 
