@@ -49,6 +49,7 @@ msg-cant-remove=No puede quitar riel
 msg-maintenance-end=Punta de Mantenimiento
 msg-changing-modes=Cambiando modos
 msg-out-of-item=No mas __1__
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Lado del poste:
 stg-flipPoles=rotar izquierda/derecha
@@ -96,3 +97,8 @@ farl-roboport=F.A.R.L. Module
 
 [controls]
 toggle-train-control=Toggle manual train control
+
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode. 
