@@ -49,6 +49,7 @@ msg-cant-remove=FARL n'arrive pas à enlever certains rails
 msg-maintenance-end=Fin de la maintenance
 msg-changing-modes=Mode changé
 msg-out-of-item=Plus de __1__ disponible
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Côté du poteau :
 stg-flipPoles=Inverser gauche/droite
@@ -96,3 +97,9 @@ farl-roboport=Module F.A.R.L.
 
 [controls]
 toggle-train-control=Activer/désactiver le contrôle manuel du train
+
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode. 
+
