@@ -49,6 +49,7 @@ msg-cant-remove=Kan ikke fjerne togskinne
 msg-maintenance-end=Vedlikehold Ferdig
 msg-changing-modes=Endrer modus
 msg-out-of-item=Tom for __1__
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Side av strømstolpe:
 stg-flipPoles=Flip venstre /høyre
@@ -96,3 +97,8 @@ farl-roboport=F.A.R.L. Module
 
 [controls]
 toggle-train-control=Toggle manual train control
+
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode. 
