@@ -49,6 +49,7 @@ msg-cant-remove=Не могу демонтировать рельсы
 msg-maintenance-end=Обслуживание закончено
 msg-changing-modes=Сменяю режимы
 msg-out-of-item=Out of __1__
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Сторона ЛЭП:
 stg-flipPoles=сменить лево/право
@@ -96,3 +97,9 @@ farl-roboport=F.A.R.L.-модуль
 
 [controls]
 toggle-train-control=Переключить режим ручного управления
+
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode.
+ 
