@@ -52,6 +52,7 @@ msg-cant-remove=Kan itne ta bort räls
 msg-maintenance-end=Underhållning avaktiverad
 msg-changing-modes=Byter mode
 msg-out-of-item=Slut på __1__
+msg-train-toggled=Changed mode: __1__
 
 stg-poleSide=Elstolpar på sida:
 stg-flipPoles=byt höger/vänster
@@ -99,3 +100,7 @@ farl-roboport=F.A.R.L. Module
 
 [controls]
 toggle-train-control=Toggle manual train control
+[mod-setting-name]
+farl_display_messages=Display toggle messages
+[mod-setting-description]
+farl_display_messages=Display message when toggling train between automatic and manual mode. 
